# drone-mapper

./: .gitignore  CMakeLists.txt  doc1.txt  drone_config.txt  map_input.txt  mission_config.txt
include/: ConfigParser.h  DroneConfig.h  DroneState.h  GroundTruthMap.h  IBuildingMap.h  ILidarSensor.h  IMovementDriver.h  IPositionSensor.h  MapFileWriter.h  MissionConfig.h  MockLidarSensor.h  MockMovementDriver.h  MockPositionSensor.h  ScoreCalculator.h  SparseBuildingMap.h  Types.h  Units.h  drone.h  simulator.h
src/: ConfigParser.cpp  GroundTruthMap.cpp  MapFileWriter.cpp  MockLidarSensor.cpp  MockMovementDriver.cpp  MockPositionSensor.cpp  ScoreCalculator.cpp  SparseBuildingMap.cpp  drone.cpp  main.cpp  simulator.cpp
